# ollamachat

./: .electronignore  .eslintrc.js  .gitignore  Dockerfile  EXTERNAL_DRIVE_PROGRESS.md  PRODUCTION_SETUP.md  PROJECT_RULES.md  RAG_FEATURES.md  README.md  SENIOR_DEV_IMPROVEMENTS.md  SETTINGS_AND_OPTIMIZATIONS.md  basic_white_gui.py  chat_config.json  debug_gui.py  docker-compose.yml  drive_detector.py  env.example  example_usage.py  fixed_gui.py  index.html  main.js  nodemon.json  ollama-config.json  ollama_chat.py  ollama_chat_dark.py  ollama_chat_final.py  ollama_chat_gui.py  ollama_chat_qt.py  package-lock.json  package.json  preload.js  pyproject.toml  rag_system.py  renderer.js  requirements.txt  scrolledtext_test.py  simple_gui.py  simple_visible_gui.py  style.css  tailwind.config.js  (+8 more)
.github/workflows/: ci-cd.yml
api/: main.py
docs/: AI_SESSION_CONTEXT.md  DEVELOPMENT.md  EXTERNAL_DRIVE_PROGRESS.md  FAN_MANAGEMENT_OPTIMIZATION.md  IMPORTANT_NOTES copy.md  INDEX.md  MACOS_BUILD_GUIDE.md  MACOS_BUILD_GUIDE_UPDATED.md  MARKDOWN_STREAMING_FIX.md  NEW_AI_SESSION_PROMPT.md  OLLAMA_API_IMPROVEMENTS.md  PROJECT_RULES.md  PROJECT_SCALING_PLAN.md  README.md  SESSION_UPDATE_TEMPLATE.md  WORKFLOW.md
scripts/: production-check.js
src/: App.tsx  index.css
src/components/: AppSidebar.tsx  ChatHistorySidebar.tsx  ChatWindow.tsx  Sidebar.tsx
src/components/ui/: button.tsx  sidebar.tsx
src/pages/: AnalyzerPage.tsx  CoderPage.tsx  ComparisonPage.tsx  DocumentsPage.tsx  LearningPage.tsx  ModelsPage.tsx  OnlinePage.tsx  SettingsPage.tsx  TrainModelPage.tsx
styles/core/: variables.css
